--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ span, a {
 }
 
 header {
-    z-index: 999;
+    z-index: 2;
     position: fixed;
     width: calc(50% - var(--offset));
     height: 100%;
@@ -163,6 +163,80 @@ header {
     object-fit: cover;
 }
 
+.header_dev_container {
+    height: 50px;
+    width: 40px;
+
+    /* display: flex; */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    display: none;
+
+    padding: 0 5px 0 5px;
+}
+
+.header_dev_container:hover {
+    cursor: pointer;
+}
+
+.header_dev {
+    position: relative;
+
+    width: 90%;
+    border: 2px solid #000;
+    border-radius: 2px;
+}
+
+.header_dev::before {
+    content: "";
+
+    position: absolute;
+    right: -2px;
+    bottom: 10px;
+
+    width: 100%;
+    height: 0px;
+
+    border: 2px solid #000;
+    border-radius: 2px;
+}
+
+.header_dev::after {
+    content: "";
+
+    position: absolute;
+    right: -2px;
+    top: 10px;
+
+    width: 100%;
+    height: 0px;
+
+    border: 2px solid #000;
+    border-radius: 2px;
+}
+
+#navbar_close {
+    display: none;
+
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+
+#navbar_close:hover {
+    background: var(--letter_col2);
+}
+
+#navbar_close:hover .cross_line1, #navbar_close:hover .cross_line2 {
+    background: var(--letter_col1);
+}
+
+#navbar_close .cross_line1, #navbar_close .cross_line2 {
+    background: var(--letter_col2);
+}
+
 .page {
     width: calc(50% + var(--offset));
     display: block;
@@ -230,73 +304,74 @@ header {
 }
 
 .project {
+    background-color: rgb(199, 199, 199);
+
     position: relative;
-    width: 49%;
-    height: 150px;
-    display: block;
-    margin-bottom: 10px;
     float: left;
-    border-radius: 4px;
+
+    width: 49%;
+    padding-top: 50%;
+
+    margin-bottom: 10px;
+    
+    border-radius: 5px;
+
+    transition: transform 0.3s;
 }
 
 .project:nth-child(even) {
     float: right;
 }
 
-.project:nth-child(n+3) {
-    height: 75px;
-}
-
-.project:nth-child(n+3) .project_title {
-    line-height: 75px;
-}
-
 .project_img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    background-size: 100%;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+
+    width: calc(100% - 20px);
+    height: 75%;
+
+    border-radius: 5px;
+    
+    background-size: 110%;
     background-position: center center;
+    background-size: cover;
     transition: background-size 0.3s;
 }
 
-.project_overlay, .project_title {
+.project_overlay {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-    transition: background 0.3s, color 0.3s, transform 0.3s;
+    
+    bottom: 10px;
+    left: 10px;
+
+    width: calc(100% - 20px);
+    height: calc(25% - 30px);
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.project_title {
-    /* Centrer le texte */
-    text-align: center;
-    line-height: 150px;
-
-    font-size: 1.5em;
-    color: rgba(0,0,0,0);
-    filter: drop-shadow(2px 2px 0px #000);
-
-    transform: translateY(5%);
-
-    user-select: none;
+.project_info {
+    color: #000;
 }
 
-.project:hover .project_img {
-    background-size: 105%;
+#project_title {
+    font-size: 1.2em;
 }
 
-.project:hover .project_overlay {
-    background: rgba(0,0,0,0.3);
+#project_title, #project_period {
+    margin-left: 10px;
 }
 
-.project:hover .project_title {
-    color: #fff;
-    transform: translateY(0%);
+#project_techno {
+    margin-right: 10px;
+}
+
+#project_period, #project_techno {
+    text-transform: none;
 }
 
 /* focus */
@@ -326,7 +401,7 @@ footer {
 .footer_dashed {
     width: 100%;
 
-    border-top: 2px dashed #000;
+    border-top: 2px solid #000;
     margin-bottom: 20px;
 }
 
@@ -366,7 +441,7 @@ footer {
 #modal_contact {
 
     /* Mettre la fenêtre modal tout devant */
-    z-index: 1000;
+    z-index: 10;
     
     width: var(--letter_width);
     height: var(--letter_height);
@@ -399,50 +474,58 @@ footer {
     position: relative;
 }
 
-#modal_close {
+/* Croix pour fermer */
 
+.cross {
     height: 30px;
     width: 30px;
-
-    float: right;
-    
     border-radius: 50%;
-
-    margin: 5px 5px 0 0;
-
     position: relative;
     transition: background 0.3s;
 }
 
-#modal_close:hover {
-    background: var(--letter_col2);
+.cross:hover {
     cursor: pointer;
 }
 
-#modal_close:hover #modal_close_line1, #modal_close:hover #modal_close_line2 {
-    background: var(--letter_col1);
-}
-
-#modal_close_line1, #modal_close_line2 {
+.cross_line1, .cross_line2 {
     position: absolute;
-    background: var(--letter_col2);
     border-radius: 2px;
     transition: background 0.3s;
 }
 
-#modal_close_line1 {
+.cross_line1 {
     width: 90%;
     height: 5px;
     top: 50%;
     transform: translate(5%, -50%) rotate(45deg);
 }
 
-#modal_close_line2 {
+.cross_line2 {
     width: 5px;
     height: 90%;
     left: 50%;
     transform: translate(-50%, 5%) rotate(45deg);
 }
+
+#modal_close {
+    float: right;
+    margin: 5px 5px 0 0;
+}
+
+#modal_close:hover {
+    background: var(--letter_col2);
+}
+
+#modal_close:hover .cross_line1, #modal_close:hover .cross_line2 {
+    background: var(--letter_col1);
+}
+
+#modal_close .cross_line1, #modal_close .cross_line2 {
+    background: var(--letter_col2);
+}
+
+/* Modal info  */
 
 #modal_my_name {
     font-size: 20px;
@@ -473,45 +556,26 @@ footer {
 
 .modal_info:hover {
     background: var(--letter_col2);
-    /* color: var(--letter_col1); */
 }
 
 .modal_info_img {
     height: 16px;
     margin-right: 8px;
-    /* height: 16px; */
 }
 
-@media screen and (max-width: 600px) {
+/* Div pour empecher interaction */
 
-    .header_content {
-        justify-content: space-between;
-    }
+#hide_overlay_navbar, #hide_overlay_modal {
+    position: fixed;
+    top: 0;
+    left: 0;
 
-    .header_links {
-        display: none;
-    }
+    width: 100vw;
+    height: 100%;
 
-    .footer_content_underdashed {
-        flex-direction: column;
-    }
+    z-index: -1;
 
-    .footer_select_langs {
-        margin-top: 20px;
-    }
-
-}
-
-@media screen and (max-width: 860px) {
-
-    .header_navbar_link_span {
-        display: none;
-    }
-
-    .header_navbar_link_img {
-        margin: 0;
-    }
-
+    transition: background-color 0.3s;
 }
 
 @media screen and ((max-width: 1080px) or (max-height: 575px)) {
@@ -548,6 +612,12 @@ footer {
         width: 115px;
     }
 
+    #dev_navbar {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
     .header_navbar {
         margin-top: unset;
         flex-direction: row;
@@ -561,14 +631,28 @@ footer {
         text-wrap: nowrap;
     }
 
+    .header_navbar_link_span {
+        font-size: .9em;
+    }
+
     .header_links {
         position: relative;
         bottom: unset;
-        margin: unset;
+        margin: 0 0 0 20px;
+
+        flex-direction: column;
     }
 
     .header_link {
-        margin: 0 2px 0 2px;
+        margin: 2px 0 2px 0;
+
+        width: 40px;
+        height: 40px;
+    }
+    
+    .header_link:hover {
+        box-shadow: none;
+        transform: none;
     }
 
     .page {
@@ -598,4 +682,133 @@ footer {
     .footer_dashed {
         margin: 20px;
     }
+}
+
+@media screen and (max-width: 767px) {
+
+    body {
+        font-size: .8em;
+    }
+
+    header {
+        height: 80px;
+    }
+
+    .header_logo_title {
+        font-size: 20px;
+    }
+
+    #dev_navbar {
+        z-index: 5;
+
+        position: fixed;
+        top: 0;
+        right: -100%;
+
+        height: 350px;
+
+        background-color: var(--col1);
+
+        padding: 0 25px 0 35px;
+
+        flex-direction: column;
+
+        border-radius: 0 0 0 10px;
+
+        transition: right .6s;
+    }
+    
+    #dev_navbar_outline {
+        z-index: 5;
+
+        position: absolute;
+        top: -10px;
+        left: 10px;
+        width: 110%;
+        height: calc(100%);
+        border: 2px solid #000;
+        border-radius: 0 0 0 5px;
+        box-sizing: border-box;
+    }
+
+    #navbar_close {
+        z-index: 6;
+        display: unset;
+    }
+
+    .header_navbar {
+        z-index: 6;
+
+        flex-direction: column;
+    }
+
+    .header_navbar_link {
+        width: 160px;
+        height: 40px;
+
+        margin-bottom: 10px;
+    }
+
+    #header_navbar_link_aboutme {
+        margin-top: 50px;
+    }
+
+    .header_navbar_link_span {
+        font-size: 1em;
+    }
+
+    .header_dev_container {
+        display: flex;
+    }
+
+    .header_links {
+        z-index: 6;
+
+        position: absolute;
+        bottom: 20px;
+
+        width: 80%;
+
+        flex-direction: row;
+        margin: 0;
+
+        border-top: 2px dashed #000;
+    }
+
+    .header_link {
+        margin: 10px 5px 0 5px;
+    }
+
+    .page {
+        padding-top: 80px;
+    }
+
+    .project_overlay {
+        justify-content: center;
+    }
+
+    #project_title {
+        margin: 0;
+    }
+
+    #project_period, #project_techno {
+        display: none;
+    }
+
+    .footer_content_underdashed {
+        flex-direction: column;
+    }
+
+    .footer_select_langs {
+        margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+
+    .project {
+        width: 100%;
+        padding-top: 100%;
+    }
+
 }
